--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "id-shorter": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1"
   },
