--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labbit-web",
+  "name": "cbt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,11 +25,11 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "query-string": "^6.13.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-apple-login": "^1.1.3",
     "react-beautiful-dnd": "^13.1.0",
     "react-colorful": "^5.3.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.11.1",
     "react-hot-loader": "^4.11.0",
@@ -45,7 +45,6 @@
     "react-string-replace": "^0.4.4",
     "react-verification-code-input": "^1.2.8",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.3",
     "styled-components": "^4.3.1",
