--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,7 +26,6 @@
     "moment": "^2.29.1",
     "query-string": "^6.13.1",
     "react": "^18.2.0",
-    "react-apple-login": "^1.1.3",
     "react-beautiful-dnd": "^13.1.0",
     "react-colorful": "^5.3.0",
     "react-dom": "^18.2.0",
@@ -36,7 +35,7 @@
     "react-idle-timer": "^4.5.6",
     "react-jsx-parser": "^1.29.0",
     "react-lottie": "^1.2.3",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
@@ -67,7 +66,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "husky": "^2.4.1",
-    "prettier": "1.18.2",
     "pretty-quick": "^1.11.0",
     "react-countdown": "^2.3.1",
     "redux-devtools": "^3.5.0"
@@ -91,12 +89,16 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not chrome <51",
+      "not safari <10",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   }
 }
