--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@hookform/resolvers": "2.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -30,7 +31,7 @@
     "react-colorful": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
-    "react-hook-form": "^7.43.3",
+    "react-hook-form": "7.16.0",
     "react-hot-loader": "^4.11.0",
     "react-idle-timer": "^4.5.6",
     "react-jsx-parser": "^1.29.0",
@@ -47,8 +48,9 @@
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.3",
     "styled-components": "^4.3.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "4.4.3",
+    "web-vitals": "^1.0.1",
+    "yup": "0.27.0"
   },
   "devDependencies": {
     "@types/history": "^4.7.2",
